	Fixed slapd-meta rootdn erroneous success issue (ITS#4122)
	Fixed slapd-meta proxying bind result issue (ITS#4129)
	Fixed slapd-meta/slapo-rwm rwm-mapping issue (ITS#4086)
	Fixed slapd-meta per-target retry (ITS#4150)
	Fixed slapd-meta size/time limit handling (ITS#4145)
	Fixed slapo-ppolicy pwdFailureTIme after bind success issue (ITS#4134)
	Fixed slapo-syncprov LDAP response types (ITS#4183)
	Fixed slapd spurious defer message (ITS#3850)
	Fixed slapd attribute SYNTAX OIDM issue (ITS#4116)
	Added slapd delta syncrepl support
	Added slapadd thread support
	Updated slapcat subordinate database handling (ITS#4089)
	Added slapd/slaptest pid/arg file consistency check (ITS#4074)
	Updated slaptools default debug level to "none" (ITS#4044)
	Fixed slurpd backwards compat issue (ITS#4151)
	Added slurpd pid/arg file consistency check (ITS#4152)
	Updated contrib smbk5pwd module
	Build environment
		Added slapd-bind test program
		Added inet_ntoa_b support for VxWorks (ITS#3440)
		Updated test036 (ITS#4095)
		Fixed test036 cmp issue (ITS#4142)
		Dropped SSLeay support
	Documentation
		slapd.conf(5) defaultSearchBase issue (ITS#4162)
		slap tool man pages wll typo (ITS#4169)

OpenLDAP 2.3.11 Release
	Fixed libldap reentrancy issue (ITS#3988)
	Fixed libldap ndelay without timeout
	Fixed slapd ldaps:// not configured issue (ITS#4082,4083)
	Fixed slapd-bdb/hdb mode argument parsing (ITS#4077)
	Fixed slapd WIN32 writefds init issue
	Fixed slapadd buffer alignment issue (ITS#4078)
	Updated slapd syncrepl to use ldap_unbind_ext
	Removed lint

OpenLDAP 2.3.10 Release
	Fixed libldap chasing of chased referrals (ITS#2942)
	Added libldap LDAP_NOT_SUPPORTED for TLS (ITS#4072)
	Added libldap LDAP_MSG_RECEIVED support
	Dropped libldap LDAP_MORE_RESULTS_TO_RETURN use
	Fixed slapd cn=config updated rootdn issue (ITS#4035)
	Fixed slapd-meta bus error (ITS#4073)
	Fixed slapd-meta/ldap/rwm empty naming context issue (ITS#4071)

OpenLDAP 2.3.9 Release
	Fixed slapd req_pwdexop bug